<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/reg_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/reg_input_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/reg_input_phone_icon"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@android:drawable/ic_btn_speak_now"/>

            <EditText
                android:id="@+id/reg_input_phone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/reg_input_phone_icon"
                android:background="#193d3b3b"
                android:hint="@string/reg_input_phone_hint"
                android:inputType="number"
                android:maxLength="20"
                android:maxLines="1"
                android:paddingEnd="40dp"
                android:paddingStart="10dp"
                android:textCursorDrawable="@drawable/edit_text_cursor_drawable"
                android:textSize="@dimen/input_text_size"
                tools:ignore="TextFields"/>

            <ImageView
                android:id="@+id/reg_input_phone_delete"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignEnd="@id/reg_input_phone_edit_text"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:src="@android:drawable/ic_delete"
                android:visibility="invisible"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/reg_input_captcha"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/reg_input_phone"
            android:paddingTop="3dp">

            <ImageView
                android:id="@+id/reg_input_captcha_icon"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@android:drawable/ic_input_add"/>

            <EditText
                android:id="@+id/reg_input_captcha_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/reg_input_captcha_icon"
                android:background="#193d3b3b"
                android:hint="@string/reg_input_captcha_hint"
                android:inputType="number"
                android:maxLength="6"
                android:maxLines="1"
                android:paddingEnd="40dp"
                android:paddingStart="10dp"
                android:textCursorDrawable="@drawable/edit_text_cursor_drawable"
                android:textSize="@dimen/input_text_size"/>

            <RelativeLayout
                android:id="@+id/reg_input_captcha_get_captcha_group"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignEnd="@id/reg_input_captcha_edit_text"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:id="@+id/reg_input_captcha_get_captcha"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/reg_get_captcha"
                    android:textColor="@color/defaultColorAccent"
                    android:textSize="@dimen/input_text_size"/>

                <TextView
                    android:id="@+id/reg_input_captcha_get_captcha_count_down"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:textColor="@color/defaultColorAccent"
                    android:textSize="@dimen/input_text_size"
                    tools:text="60s"/>

                <ProgressBar
                    android:id="@+id/reg_input_captcha_progress_bar"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:visibility="invisible"
                    android:indeterminate="true"
                    tools:visibility="visible"/>
            </RelativeLayout>

            <ImageView
                android:id="@+id/reg_input_captcha_vertical_line"
                android:layout_width="2dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/reg_input_captcha_get_captcha_group"
                android:src="@android:color/darker_gray"/>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/reg_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_input"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/reg_agree_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/arrow_down_float"/>

        <TextView
            android:id="@+id/reg_agree_plain_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/reg_agree_icon"
            android:text="@string/reg_agree_plain_text"/>

        <TextView
            android:id="@+id/reg_agree_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/reg_agree_plain_text"
            android:text="@string/reg_agree_link_text"
            android:textColor="@color/defaultColorAccent"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login_reg_confirm_btn_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_agree"
        android:paddingTop="40dp">

        <Button
            android:id="@+id/login_reg_confirm_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_login_login_btn"
            android:text="@string/reg_confirm_text"
            android:textColor="@color/selector_text"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login_return_login_btn_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_reg_confirm_btn_frame"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/login_return_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_login_reg_btn"
            android:text="@string/reg_btn_return_login"/>
    </RelativeLayout>
</RelativeLayout>