<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_anim_group_2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/login_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/login_input_username"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/login_input_username_icon"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@android:drawable/ic_media_play"/>

            <EditText
                android:id="@+id/login_input_username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/login_input_username_icon"
                android:background="#193d3b3b"
                android:hint="@string/login_username_hint"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingEnd="40dp"
                android:paddingStart="10dp"
                android:textCursorDrawable="@drawable/edit_text_cursor_drawable"
                android:textSize="@dimen/input_text_size"/>

            <ImageView
                android:id="@+id/login_input_username_delete"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignEnd="@id/login_input_username_edit_text"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:src="@android:drawable/ic_delete"
                android:visibility="invisible"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/login_input_pw"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/login_input_username"
            android:paddingTop="3dp">

            <ImageView
                android:id="@+id/login_input_pw_icon"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@android:drawable/ic_lock_lock"/>

            <EditText
                android:id="@+id/login_input_pw_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/login_input_pw_icon"
                android:background="#193d3b3b"
                android:hint="@string/login_pw_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingEnd="40dp"
                android:paddingStart="10dp"
                android:textCursorDrawable="@drawable/edit_text_cursor_drawable"
                android:textSize="@dimen/input_text_size"/>

            <ImageView
                android:id="@+id/login_input_pw_delete"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignEnd="@id/login_input_pw_edit_text"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:src="@android:drawable/ic_delete"
                android:visibility="invisible"/>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login_forget_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/login_input"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/login_forget_pw_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/arrow_down_float"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/login_forget_pw_icon"
            android:text="@string/login_forget_pw"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login_login_btn_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_forget_pw"
        android:paddingTop="40dp">

        <Button
            android:id="@+id/login_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_login"
            android:textColor="@color/selector_text"
            android:background="@drawable/selector_login_login_btn"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login_reg_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_below="@id/login_login_btn_frame">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_login_reg_btn"
            android:text="@string/login_reg"/>
    </RelativeLayout>
</RelativeLayout>